Fix broken navbar collapse/toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ h3 {
 }
 
 .navbar {
-    height: 72px;
+    height: 120px;
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 0;
@@ -23,10 +23,19 @@ h3 {
     padding-bottom: 0;
 }
 
+.navbar-brand {
+    font-size: 40px !important;
+    margin-left:55px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: teal;
+}
 .nav-link {
     color: white !important;
 }
 
+.bg-secondary {
+    background-color: teal !important;
+}
 .nav-section {
     margin-top: 0;
     margin-bottom: 0;
